<?xml version="1.0" encoding="utf-8"?>
<input-method xmlns:android="http://schemas.android.com/apk/res/android"
    android:settingsActivity="com.pckeyboard.ime.settings.SettingsActivity"
    android:supportsSwitchingToNextInputMethod="true"
    android:isDefault="false">

    <subtype
        android:label="@string/subtype_en_us"
        android:imeSubtypeLocale="en_US"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="AsciiCapable,EmojiCapable"
        android:isAsciiCapable="true" />

    <subtype
        android:label="@string/subtype_hu_hu"
        android:imeSubtypeLocale="hu_HU"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="EmojiCapable"
        android:isAsciiCapable="true" />

    <subtype
        android:label="@string/subtype_de_de"
        android:imeSubtypeLocale="de_DE"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="EmojiCapable"
        android:isAsciiCapable="true" />

    <subtype
        android:label="@string/subtype_es_es"
        android:imeSubtypeLocale="es_ES"
        android:imeSubtypeMode="keyboard"
        android:imeSubtypeExtraValue="EmojiCapable"
        android:isAsciiCapable="true" />

</input-method>
